# LLM-Response-Analyser

./: .gitignore  README.md  main.py  pyproject.toml
data/: testQuestions.json
src/: embedder.py  llm-client.py  llm_client.py  reporter.py  scorer.py
test/: test_scorer.py
