[project]
name = "llm-response-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.102.0",
    "langsmith[claude-agent-sdk]>=0.8.5",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
